# maynd-desktop

./: .env.example  .gitignore  README.md  app.vue  i18n.config.ts  nuxt.config.ts  package.json  tauri.conf.json  tsconfig.json
assets/css/: main.css
locales/: ar.json  en.json  fr.json
middleware/: locale.global.ts
pages/: about.vue  chat.vue  documents.vue  help.vue  index.vue  license.vue  settings.vue
scripts/: setup.sh
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/components/: LanguageSwitcher.vue
src/composables/: useAI.ts  useDatabase.ts  useHardware.ts  useLicense.ts  useRAG.ts  useRealAI.ts  useTauriCommands.ts
src/layouts/: default.vue
src/plugins/: tauri.client.ts
src/stores/: app.ts
src/types/: index.ts
