[package]
name = "maynd-desktop"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0" }
tauri-plugin-sysinfo = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]