[package]
name = "maynd-desktop"
version = "1.0.0"
description = "100% offline AI desktop application for Moroccan B2B professionals"
authors = ["Ismail Rabah"]
license = "MIT"
repository = "https://github.com/ismailrabah/maynd-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-sysinfo = "2.0"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
